k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbourline
spec:
  ingressClassName: nginx
  rules:
    - host: harbourline.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harbourline-web
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kps-grafana
                port:
                  number: 80
